# device-companion

./: .flake8  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: style.sh
src/device_companion/: communication.py  device.py  domain.py  events.py  mqtt.py  watcher.py
