[tool.poetry]
name = "device-companion"
version = "0.1.0"
description = ""
authors = ["Sam Scott <sam.scott7@me.com>"]
readme = "README.md"
packages = [{include = "device_companion", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.2.0"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.mypy]
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
